--- a/index.html
+++ b/index.html
@@ -89,7 +89,76 @@
 
       <section class="container">
         <h2 class="top-text">Lates Course</h2>
+        <div class="courses">
+          <div class="course">
+            <div class="course-baner">
+              <img src="./images/courses/course-1.png" alt="">
+            </div>
+            <div class="course-details">
+              <h3 class="blog-Heading">React - The Complete <br>Guide 2020</h2>
+              <div class="course-info">
+                <div>
+                  <i class="fa-sharp fa-solid fa-star field"></i>
+                  <i class="fa-sharp fa-solid fa-star field"></i>
+                  <i class="fa-sharp fa-solid fa-star field"></i>
+                  <i class="fa-sharp fa-solid fa-star field"></i>
+                  <i class="fa-sharp fa-solid fa-star empty"></i>
+                  <span>4.5</span>
+                </div>
+                <div class="course-time">
+                  <i class="fa-sharp fa-solid fa-clock"></i>
+                  <p class="time-set">01.30 hr</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="course">
+            <div class="course-baner">
+              <img src="./images/courses/course-2.png" alt="">
+            </div>
+            <div class="course-details">
+              <h3 class="blog-Heading">React - The Complete <br>Guide 2020</h2>
+              <div class="course-info">
+                <div>
+                  <i class="fa-sharp fa-solid fa-star field"></i>
+                  <i class="fa-sharp fa-solid fa-star field"></i>
+                  <i class="fa-sharp fa-solid fa-star field"></i>
+                  <i class="fa-sharp fa-solid fa-star field"></i>
+                  <i class="fa-sharp fa-solid fa-star empty"></i>
+                  <span>4.5</span>
+                </div>
+                <div class="course-time">
+                  <i class="fa-sharp fa-solid fa-clock"></i>
+                  <p class="time-set">01.30 hr</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="course">
+            <div class="course-baner">
+              <img src="./images/courses/course-3.png" alt="">
+            </div>
+            <div class="course-details">
+              <h3 class="blog-Heading">React - The Complete <br>Guide 2020</h2>
+              <div class="course-info">
+                <div>
+                  <i class="fa-sharp fa-solid fa-star field"></i>
+                  <i class="fa-sharp fa-solid fa-star field"></i>
+                  <i class="fa-sharp fa-solid fa-star field"></i>
+                  <i class="fa-sharp fa-solid fa-star field"></i>
+                  <i class="fa-sharp fa-solid fa-star empty"></i>
+                  <span>4.5</span>
+                </div>
+                <div class="course-time">
+                  <i class="fa-sharp fa-solid fa-clock"></i>
+                  <p class="time-set">01.30 hr</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
+    <script src="https://kit.fontawesome.com/d700d95f93.js" crossorigin="anonymous"></script>
   </body>
 </html>
